--- a/portfoliowebsite.html
+++ b/portfoliowebsite.html
@@ -21,9 +21,10 @@
           <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
             <div class="navbar-nav">
               <a class="nav-link active text-white" aria-current="page" href="#home">Home</a>
-              <a class="nav-link text-white" href="#skills">Skills & Services</a>
-              <a class="nav-link text-white" href="#portfolio">Portfolio</a>
+              <a class="nav-link text-white" href="#skills">Skills</a>
+              <a class="nav-link text-white" href="#projects">Projects</a>
               <a class="nav-link text-white" href="#freelance">Freelance</a>
+              <a class="nav-link text-white" href="#members">Members</a>
               <a class="nav-link text-white" href="#contact">Contact</a>
             </div>
           </div>
@@ -165,7 +166,7 @@
     <!-- skill section end  -->
 
     <!-- project section open  -->
-      <div class="portfolio bg-light mx-4" id="portfolio">
+      <div class="portfolio bg-light mx-4 " id="projects">
         <div class="container-lg mb-5 pt-5">
           <div class="row justify-content-center mb-5 my-3">
             <div class="col-lg-8">
@@ -229,9 +230,9 @@
     <!-- project section close  -->
 
     <!-- freelancer section  -->
-      <section class="freelancer bg-dark" id="freelancer">
-        <div class="container-lg">
-          <div class="row justify-content-center py-4">
+      <section class="freelancer bg-dark my-5 py-5" id="freelance">
+        <div class="container-lg my-5">
+          <div class="row justify-content-center py-5">
             <div class="col-lg-8 text-center">
               <p class=" fs-5 text-light">Do you have any projects ?</p>
               <h2 class=" fs-1 text-white mb-4">I'm available for freelancer projects.</h2>
@@ -342,10 +343,10 @@
             </div>
           </div>
 
-          <div class="row">
+          <div class="row justify-content-center">
 
             <!-- left side start  -->
-            <div class="col-md-5 p-4">
+            <div class="col-md-5 p-4 ">
 
               <div class="contact-phone d-flex align-items-center p-2">
                 <div class="icon">
@@ -418,6 +419,18 @@
         </div>
       </section>
     <!-- contact section end  -->
+
+    <!-- footer section  -->
+      <div class="footer border-top py-4 bg-dark">
+        <div class="container-lg">
+          <div class="row">
+            <div class="col-lg-12 text-center">
+              <p class=" text-white-50 m-0">We Learn, We Share, We Code | This Laboratory for all coders.</p>
+            </div>
+          </div>
+        </div>
+      </div>
+    <!-- footer section end  -->
 </body>
 <!-- JavaScript Bundle with Popper -->
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.1/dist/js/bootstrap.bundle.min.js" integrity="sha384-u1OknCvxWvY5kfmNBILK2hRnQC3Pr17a+RTT6rIHI7NnikvbZlHgTPOOmMi466C8" crossorigin="anonymous"></script>
